2012-11-04  Rene Liebscher <R.Liebscher@gmx.de>

	* lexer.l,config_gram.y,config.[hc]: changed reading of numbers to integers
	        except of default_bitclock which is the only real number.
	        No signs are allowed as negative values do not make sense for current
	        config values.
	* buspirate.c: include own header file buspirate.h
	* doc/.cvsignore: add programmers.texi to ignore list

2012-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/Makefile.am: add EXTRA_DIST, replace $(srcdir) by
	$(builddir) for generated files, so "make distcheck"
	works again

2012-09-05  Rene Liebscher <R.Liebscher@gmx.de>

	* doc/Makefile.am: add $(srcdir) to name of generated files, so BSD make
	                   find the files ( GNU make sees no difference if the 
	                   file is called version.texi or ./version.texi )

2012-08-15  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7184 Support for PICKit2 programmer
	* Makefile.am: add pickit2 files
	* pickit2.[ch]: new programmer implementation
	* pgm_type.c: add pickit to list
	* avrdude.1: documentation for pickit2
	* doc/avrdude.texi: documentation for pickit2
	* avrdude.conf.in: add pickit2 programmer entry

2012-08-15  Rene Liebscher <R.Liebscher@gmx.de>

	bug #30559 Ft232 bit-bang support, see comment #30
	* ft245r.c: added semaphore workaround for MacOS X,
	            added pthread_testcancel in reader thread
	
	* configure.ac: added check for TYPE_232H in libftdi (not in libftdi < 0.20)
	* avrftdi.c: do not use TYPE_232H if not declared

2012-08-13  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi.c: fixes pin_limit for different FTDI devices (there was a mixup
	between 2232C and 2232H)

2012-07-29  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi.c: bugfixes (synchronisation) and maintenance (paged programming,
	nicer output, separation of parameter checking and actual code)

2012-07-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
